<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
<!--
        <variable
            name="view"
            type="eventcoordinator2017.myevent.ui.forgot.ForgotView" />-->
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        android:gravity="center_vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title=""
            app:navigationIcon="@drawable/ic_arrow_back_primary"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/password_recovery"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/change_password_dialog"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_edittext_selector"
                    android:ems="20"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="14dp"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <!--<Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_button_solid"
                    android:drawableEnd="@drawable/ic_android_done"
                    android:onClick="@{()->view.OnButtonSubmit()}"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="SUBMIT"
                    android:textColor="#fff"
                    android:textSize="18sp" />
-->

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>